# CMAKE

code/fun1/include/: fun1.h
code/fun1/source/: fun1.c
code/fun2/include/: fun2.h
code/fun2/source/: fun2.c
project/: build_all.sh
project/prj_demo_a/: Dockerfile  build.sh  cgsl.cmake  pack.sh
project/prj_demo_a/demo_a/cmakelist/: CMakeLists.txt
project/prj_demo_a/demo_a/cmakelist/demo_a_exe/: CMakeLists.txt
project/prj_demo_a/demo_a/cmakelist/fun_1/: CMakeLists.txt
project/prj_demo_a/demo_a/main/: main.c
